--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,10 @@
   </listener>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/spring/service-context.xml</param-value>
+    <param-value>
+    	/WEB-INF/spring/service-context.xml
+    	/WEB-INF/spring/security-context.xml
+    </param-value>
   </context-param>
   
   <servlet>
@@ -27,18 +30,32 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   
-  <filter>
-  	<filter-name>characterEncodingFilter</filter-name>
-  	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-  	<init-param>
-  		<param-name>encoding</param-name>
-  		<param-value>UTF-8</param-value>
-  	</init-param>
-  </filter>
   
-  <filter-mapping>
-  	<filter-name>characterEncodingFilter</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
+<!-- 인증을 위한 필터 -->
+<filter>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+</filter>
+
+<filter-mapping>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
+  
+  
+<!-- 인코딩을 위한 필터 -->
+<filter>
+	<filter-name>characterEncodingFilter</filter-name>
+	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	<init-param>
+		<param-name>encoding</param-name>
+		<param-value>UTF-8</param-value>
+	</init-param>
+</filter>
+
+<filter-mapping>
+	<filter-name>characterEncodingFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
   
 </web-app>
