--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/web.xml=UTF-8
+encoding//src/main/webapp/resource/js/dnd.jsp=UTF-8
 encoding//src/main/webapp/resource/js/script.jsp=UTF-8
